# extracts-md

./: .gitignore  404.html  AGENTS.md  FORMATTING_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  README.md  book.toml  convert_docx.py  frontmatter_preprocessor.py  gen_nav.py  index.html  mise.toml  print.html  pyproject.toml  pytest.ini  searchindex.js  standards.base  toc.html  toc.js
.github/workflows/: README.md  deploy.yml
CEN_TS_16157-13/: index.html
EN_18052/: index.html
EN_ISO_12855/: index.html
EN_ISO_14906/: index.html
EN_ISO_17573-1/: index.html
ISO_14823-1/: index.html
ISO_15622/: index.html
ISO_17748-3/: index.html
ISO_21214/: index.html
ISO_23792-1/: index.html
ISO_26683-2/: index.html
ISO_4448-1/: index.html
ISO_TS_19091/: index.html
ISO_TS_22726-1/: index.html
ISO_TS_22741-10/: index.html
input/: CEN_TS_16157-13.docx  EN_18052.docx  EN_ISO_12855.docx  EN_ISO_14906.docx  EN_ISO_17573-1.docx  ISO_14823-1.docx  ISO_15622.docx  ISO_17748-3.docx  ISO_21214.docx  ISO_23792-1.docx  ISO_26683-2.docx  ISO_4448-1.docx  ISO_TS_19091.docx  ISO_TS_22726-1.docx  ~$O_TS_22726-1.docx
output/: SUMMARY.md  index.md
output/CEN_TS_16157-13/: index.md
output/EN_18052/: index.md
output/EN_ISO_12855/: index.md
output/EN_ISO_14906/: index.md
output/EN_ISO_17573-1/: index.md
output/ISO_14823-1/: index.md
output/ISO_15622/: index.md
output/ISO_17748-3/: index.md
output/ISO_21214/: index.md
output/ISO_23792-1/: index.md
output/ISO_26683-2/: index.md
tests/: conftest.py  test_integration.py  test_preflight.py
(+9 files in other folders)
