[project]
name = "its-extracts"
version = "0.1.0"
description = "Convert ISO/CEN/EN standard extracts (docx) to Markdown for an mdBook site"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
